[fix] Long guide titles wrap around buttons now

--- a/app/assets/stylesheets/styles/_guides.css.scss
+++ b/app/assets/stylesheets/styles/_guides.css.scss
@@ -193,9 +193,8 @@
     }
 
     .guide-controls {
-      position: absolute;
-      top: 1rem;
-      right: 0;
+      float: right;
+      text-align: right;
     }
   }
 
